--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login and Request Form</title>
+    <title>Web Login</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
@@ -15,16 +15,16 @@
         <div style="text-align: center;">
             <img src="img/tu-logo.png" alt="TU-Logo" class="img-fluid">
             <div>
-                <h1 class="text-center">REQUEST FORM</h1>
+                <h1 class="text-center">Welcome ! to WebSite Login</h1>
             </div>
         </div>
 
         <div class="login-container">
-            <h2 class="text-center">LOGIN</h2>
+            <h2 class="text-center">WEBSITE LOGIN</h2>
 
             <form class="login-form" id="loginForm" onsubmit="return false;">
                 <div id="result" style="display:none;">
-                    <h2 style="color: orange;">Login Successful</h2>
+                    <h2 style="color: orange;">Login Successful !</h2>
                     <p>Name: <span id="displayname_th"></span></p>
                 </div>
 
@@ -38,21 +38,20 @@
                     <div class="error-message" id="username-error"></div>
                 </div>
 
-                <div class="mb-3">
+                <div class="mb-2">
                     <label for="password" class="form-label">Your Password</label>
                     <div class="input-group">
                         <span class="input-group-text"><i class="fas fa-lock"></i></span>
-                        <input type="password" class="form-control" id="password" name="password"
-                            placeholder="Enter Password" required>
-
-                        <span id="toggle-password" onclick="togglePassword()"><span class="input-group-text"></span><i
-                                class="fas fa-eye" id="togglePassword" style="cursor: pointer;"></i></span>
-
+                        <input type="password" class="form-control" id="password" placeholder="Enter Password" required>
+                        <span class="input-group-text" id="toggle-password" onclick="togglePassword()">
+                            <i class="fas fa-eye" id="togglePasswordIcon" style="cursor: pointer;"></i>
+                        </span>
                     </div>
+
                     <div class="error-message" id="password-error"></div>
                 </div>
 
-                <div class="mb-2">
+                <div class="mb-1">
                     <input type="hidden" id="role" name="role">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
                         data-bs-toggle="dropdown" aria-expanded="false">
@@ -66,10 +65,10 @@
                     <div class="error-message" id="role-error"></div>
                 </div>
 
-                <button type="button" class="btn btn-primary w-100" id="login-btn" onclick="submitLogin()"
-                    disabled>Login</button>
-                <button type="button" class="btn btn-secondary w-100 mt-2"
-                    onclick="call_REST_API_Hello()">Hello</button>
+                <button type="button" class="btn btn-primary w-100" id="login-btn" onclick="submitLogin()">
+                    Login
+                </button>
+
             </form>
             <p id="message"></p>
         </div>
